# nexadownloadmanager

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  resources.qrc  websiteplan.md
.github/workflows/: build.yml
docs/: PLAN.md
extension-chromium/: README.md  background.js  content.js  manifest.json  package.sh  popup.html  popup.js
extension-firefox/: build.sh  manifest.json
native-host/: README.md  install.sh  nexa-host.cpp
packaging/: TOOLS.md  nexa.desktop  postinst  postrm
src/: main.cpp
src/ai/: AiClient.cpp  AiClient.h
src/auth/: AuthUtils.cpp  AuthUtils.h  AuthenticationManager.cpp  AuthenticationManager.h  BrowserLogin.cpp  BrowserLogin.h  CookieFile.cpp  CookieFile.h
src/core/: Database.cpp  Database.h  DownloadEngine.cpp  DownloadEngine.h  DownloadTask.cpp  DownloadTask.h  ExternalTools.h  Logging.h  RateLimiter.cpp  RateLimiter.h  SegmentDownloader.cpp  SegmentDownloader.h  Types.h  UpdateChecker.cpp  UpdateChecker.h
src/grabber/: HlsGrabber.cpp  HlsGrabber.h
src/ipc/: IpcServer.cpp  IpcServer.h  NativeHostRegistrar.cpp  NativeHostRegistrar.h
src/site/: YtDlpGrabber.cpp  YtDlpGrabber.h
src/torrent/: TorrentManager.cpp  TorrentManager.h
src/ui/: ClipboardMonitor.cpp  ClipboardMonitor.h  DownloadDetailsDialog.cpp  DownloadDetailsDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SiteLoginsDialog.cpp  SiteLoginsDialog.h  UiHelpers.cpp  UiHelpers.h
src/web/: WebServer.cpp  WebServer.h
tests/: AuthTest.cpp  FormatTest.cpp
